<resources>
    <string name="app_name">EduCracyPedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EduCracyPedia</string>
    <string name="nav_header_subtitle">Concept By Mayur Tembhare</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_news">Global News</string>
    <string name="menu_contact_us" >Contact Us</string>
    <string name="menu_terms">Terms</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
</resources>