<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_folder_open_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_perm_phone_msg_24"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_outline_message_24"
            android:title="@string/menu_rate" />

    </group>
</menu>